deploy: 17362247b7dcc7534d35a8b28511f268dc08433d

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<!doctype html><html lang=zh-TW><head><meta name=generator content="Hugo 0.123.7"><meta charset=UTF-8><title>My New Hugo Site</title></head><body><h1>歡迎</h1><ul><li><a href=/posts/my-first-post/>我的第一篇文章</a></li></ul></body></html>
+<!doctype html><html lang=zh-TW><head><meta name=generator content="Hugo 0.123.7"><meta charset=UTF-8><title>ChiYu Code Journey</title></head><body><nav><ul><li><a href=/>首頁</a></li><li><a href=/MyBlob/posts/>Posts</a></li></ul></nav><h1>歡迎來到 Blob</h1><h2>導覽列</h2><nav><ul><li><a href=/>首頁</a></li><li><a href=/MyBlob/posts/>Posts</a></li></ul></nav><h2>近期文章</h2><ul><li><a href=/MyBlob/posts/codex-intro/>第一次認識 Codex：讓 AI 幫你寫程式不是夢！</a>
+<span>2025-06-05</span></li><li><a href=/MyBlob/posts/blob-intro/>介紹 Blob</a>
+<span>2024-06-01</span></li><li><a href=/MyBlob/posts/my-first-post/>我的第一篇文章</a>
+<span>2024-01-01</span></li></ul><h2>文章類別</h2><ul></ul></body></html>
