--- a/dates/index.html
+++ b/dates/index.html
@@ -31,7 +31,7 @@
                     <a href="${e[o]}" class="block p-1 rounded-full transition-colors font-bold" style="color: var(--link-color); text-decoration: underline; text-decoration-thickness: 2px;">
                         ${t}
                     </a>
-                `):n.insertAdjacentHTML("beforeend",`<span class="block p-1">${t}</span>`)}}i.addEventListener("click",()=>{t.setMonth(t.getMonth()-1),s(t)}),a.addEventListener("click",()=>{t.setMonth(t.getMonth()+1),s(t)}),s(t)})</script><aside class="hidden lg:block lg:col-span-3"><div class="sticky top-8 space-y-8"><aside class=sidebar><div class=sidebar-inner><div class=widget><h3 class=widget-title>系列文章</h3><ul class=widget-list><li><a href=/ChiYu-Blob/series/designpattern/>設計模式
+                `):n.insertAdjacentHTML("beforeend",`<span class="block p-1">${t}</span>`)}}i.addEventListener("click",()=>{t.setMonth(t.getMonth()-1),s(t)}),a.addEventListener("click",()=>{t.setMonth(t.getMonth()+1),s(t)}),s(t)})</script><aside class="w-64 flex-shrink-0 lg:block pl-8"><div class="sticky top-8 space-y-8"><aside class=sidebar><div class=sidebar-inner><div class=widget><h3 class=widget-title>系列文章</h3><ul class=widget-list><li><a href=/ChiYu-Blob/series/designpattern/>設計模式
 <span class=posts-count>24</span></a></li><li><a href=/ChiYu-Blob/series/2025ithomeironman/>2025 iThome 鐵人賽
 <span class=posts-count>3</span></a></li></ul></div></div></aside><div class=mt-8><h3 class="text-xl font-bold mb-4 pb-2 border-b" style=border-color:var(--border-color)>文章月曆</h3><div id=calendar-widget><div class="flex justify-between items-center mb-2 font-semibold"><button id=cal-prev title=上個月 class="px-2 py-1 rounded hover:bg-gray-200 dark:hover:bg-gray-700">&lt;</button>
 <span id=cal-month-year></span>
